= HEAD

* Add response_request plugin allowing response object access to request object (jeremyevans)

* Add default_status plugin for overriding the default response status (celsworth) (#47)

* Make RodaCache synchronize access on MRI (jeremyevans)

* Support opts[:host_matcher_captures] = true to make :host=>/regexp/ matcher yield captures in the header_matchers plugin (jeremyevans)

* Allow Roda.rewrite_path to take a block in the path_rewriter plugin (Freaky) (#45)

= 2.6.0 (2015-09-14)

* Add :params and :params! matchers to param_matchers plugin (jeremyevans)

* Merge options when loading csrf plugin multiple times (jeremyevans)

* Allow request.halt to work in before hooks in the hooks plugin (celsworth) (#38)

= 2.5.1 (2015-08-13)

* Allow multi_route and middleware plugins to work together (janko-m) (#36)

= 2.5.0 (2015-07-14)

* Make :by_name option to path plugin default to true in development (jeremyevans)

* Add :cache_class option to render plugin, for customized template cache behavior (celsworth) (#34)

* Add :compiled_asset_host option to assets plugin, to use a host for compiled assets (jeremyevans)

* Allow r.multi_run to take a block that is called with the prefix before dispatching to the rack app (mikz) (#32)

= 2.4.0 (2015-06-15)

* Add websockets plugin, for integration with faye-websocket (jeremyevans)

* Add status_handler plugin, similar to not_found but for any status code (celsworth) (#29)

* Support Closure Compiler, Uglifier, and MinJS for compressing javascript in the assets plugin (jeremyevans)

* Make Roda.plugin always return nil (jeremyevans)

* Add :gzip option to assets plugin (jeremyevans)

= 2.3.0 (2015-05-13)

* Make assets plugin work better with json plugin when r.assets is the last method called in a route block (jeremyevans) (#27)

* Support no_mail! method in the mailer plugin, for skipping an email (jeremyevans)

* Add precompile_templates plugin, for saving memory when using a forking webserver (jeremyevans)
